--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "connectify": "file:",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
