--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
-<<<<<<< HEAD
     "@reduxjs/toolkit": "^2.2.7",
-=======
+    "connectify": "file:",
     "gsap": "^3.12.5",
->>>>>>> ac4048083b50374c6467877b2cdc19f1fe4d9dbf
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
